Tests/Conformance/Generated/Builtin/Constant/Data/DataMisByteString.lean
-- Auto-generated by gen_conformance_tests.py — do not edit manually.
import Tests.Conformance.ConformanceUtils
import PlutusCore.UPLC.ScriptEncoding.Basic

namespace Tests.Conformance.Generated.Builtin.Constant.Data.DataMisByteString

open Tests.Conformance

/-- error: Parsing error -/
#guard_msgs in
#conformance_import_uplc builtin_constant_data_dataMisByteString "../.plutus-conformance/plutus-conformance/test-cases/uplc/evaluation/builtin/constant/data/dataMisByteString/dataMisByteString.uplc"

end Tests.Conformance.Generated.Builtin.Constant.Data.DataMisByteString
